# compiler-dungeon

./: .gitignore  CMakeLists.txt  README.md
cmake/: RunCompilerTest.cmake
src/: ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  pretty_printer.hpp  semantic.hpp  token.hpp  types.hpp
src/common/: file.hpp  pretty_printer.cpp  pretty_printer.hpp
src/diag/: diag.hpp
src/driver/: compiler.cpp  compiler.hpp  config.hpp
src/frontend/: ast.hpp  lexer.hpp  parser.cpp  parser.hpp  semantic.hpp  token.hpp  types.hpp
src/ir/hir/: ast2hir.hpp  hir.hpp
src/ir/tac/: ast2tac.hpp  hir2tac.hpp  tac.hpp
src/middleend/cfg/: cfg.hpp  ssa.cpp  ssa.hpp
src/middleend/hir/: ast2hir.hpp  hir.hpp
src/middleend/tac/: hir2tac.hpp  tac.hpp
src/passes/: pass.hpp
src/sema/: semantic.hpp
test/: add.dg  fib.dg  hello.dg
test/cfg/: dead_ret.ks
test/ir/tac/: expr.ks
test/ir/tac/good/: expr.ks
test/lexer/bad/: at_sign.ks  identifier.ks  identifier2.ks
test/parser/bad/: bad_call_syntax.ks  else_without_for.ks  end_before_expr.ks  extra_junk.ks  fn_decl_params.ks  invalid_expr.ks  invalid_function.ks  keyword.ks  missing_type.ks  missing_type_var_decl.ks  misspelled_keyword.ks  space_in_keyword.ks  unclosed_paren.ks
test/parser/good/: expr.ks  for_loop.ks  forward_decl.ks  func_call.ks  if.ks  multi_digit.ks  nested_blocks.ks  nested_if.ks  unreachable.ks  vars.ks  while.ks  while_true.ks
test/semantic/bad/: call_arity.ks  invalid_assign.c  invalid_break.ks  invalid_lvalue.ks  invalid_lvalue2.ks  mixed_precedence.ks  redef.ks  redef2.ks  undeclared_in_call.ks  undeclared_var.ks  undeclared_var2.ks  var_scoping.ks
test/semantic/good/: break_in_for.ks  function_call.ks  if_else.ks  multiple_assign.ks  nested_blocks.c  scoped_shadow.ks
test/typecheck/bad/: for_condition.ks  incompatible_ret_type.ks  incompatible_ret_type2.ks  integer_negation.ks  invalid_condition.ks  invalid_return.ks  missing_ret.ks  undeclared_var.ks
test/typecheck/good/: cond.ks  expr.ks  for_loop.ks
